Kubernetes_admin+stuff/ingress-controller/magical-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magical-nginx
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 31304
    protocol: TCP
    name: http
  selector:
    app: magical-nginx
