Kubernetes_admin+stuff/ingress-controller/nginx-deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-official-service
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 31304
    protocol: TCP
    name: http
  selector:
    app: magical-nginx
